--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "appcenter-clone-configuration",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "package": "ncc build src/index.ts --license licenses.txt"
   },
   "keywords": [],
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=20"
+  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.1"
+    "@types/node": "^20.11.16",
+    "@vercel/ncc": "^0.38.1",
+    "typescript": "^5.3.3"
   }
 }
