--- a/action.yml
+++ b/action.yml
@@ -7,12 +7,16 @@ inputs:
   project-name:
     description: "Name of project e.g: org/project_name"
     required: true
-  source-branch:
-    description: "Name of the branch to be cloned"
-    required: true
   target-branch:
     description: "Name of the target branch on which the configuration is applied"
     required: true
+  source-branch:
+    description: "Name of the source branch to be cloned"
+    required: false
+  start-build:
+    description: "Whether the action should also start the build"
+    required: false
+    default: "no"
 runs:
   using: "node20"
   main: "dist/index.js"
